# riscv-spike-simulations

./: .gitignore  CMakeLists.txt  LICENSE  README.md  debug-cmd.txt  distance.c  py_requirements.txt  run.sh
app/src/: main.c
apps/: CMakeLists.txt  cfft1024.c  cfft2048.c  cfft4096.c  cfft512.c  cfft64.c  cfft_f32_1024.c  cfft_f32_128.c  cfft_f32_2048.c  cfft_f32_256.c  cfft_f32_4096.c  cfft_f32_512.c  cfft_f32_64.c  cfft_q15_1024.c  cfft_q15_128.c  cfft_q15_2048.c  cfft_q15_256.c  cfft_q15_4096.c  cfft_q15_512.c  cfft_q15_64.c  cfft_q31_1024.c  cfft_q31_128.c  cfft_q31_2048.c  cfft_q31_256.c  cfft_q31_4096.c  cfft_q31_512.c  cfft_q31_64.c  main.c  mat_mult.c  rfft_f32_1024.c  rfft_f32_128.c  rfft_f32_2048.c  rfft_f32_256.c  rfft_f32_4096.c  rfft_f32_512.c  rfft_f32_64.c  rfft_q15_1024.c  rfft_q15_128.c  rfft_q15_2048.c  rfft_q15_256.c  (+12 more)
cmake/: FindPk.cmake  FindPulpino.cmake  riscv.cmake
cmake/modules/: FindCMSIS.cmake  FindSpike.cmake
docs/: CMakeLists.txt  mainpage.md
external_library/: CMakeLists.txt
lib/: CMakeLists.txt
lib/fft_arrays/: CMakeLists.txt
lib/fft_arrays/include/: fft_input_array.h
lib/fft_arrays/src/: fft_input_array.c
my_libraries/include/distance/: distance.h
scripts/: calc_cycles.py  calc_execution_time.py  cmake_build.sh  cmake_configure.sh  dsp-benchmarks.csv  fft_array_generator.py  generate_icount_plot.py  generate_igroup_plot.py  objdump_parser.py  plot_all_exec_time.py  plot_exec_time.py  spike_parser.py
src/: CMakeLists.txt  distance.c
tests/: CMakeLists.txt
